vocab table display on admin side

--- a/admin.html
+++ b/admin.html
@@ -84,6 +84,7 @@
                     
                     <div class="form-actions">
                         <button type="button" id="resetForm" class="btn-secondary">Reset Form</button>
+                        <button type="button" id="cancelCourseEditBtn" class="btn-secondary" style="display: none;">Cancel Edit</button>
                         <button type="submit" id="submitCourse" class="btn-primary">
                             <span class="btn-text">Create Course</span>
                             <span class="btn-arrow">→</span>
@@ -166,6 +167,7 @@
                         
                         <div class="form-actions">
                             <button type="button" id="resetLessonForm" class="btn-secondary">Reset Form</button>
+                            <button type="button" id="cancelEditBtn" class="btn-secondary" style="display: none;">Cancel Edit</button>
                             <button type="submit" id="submitLesson" class="btn-primary">
                                 <span class="btn-text">Create Lesson</span>
                                 <span class="btn-arrow">→</span>
