fixed lesson details

--- a/lesson.html
+++ b/lesson.html
@@ -54,6 +54,9 @@
                         <span class="lesson-duration" id="lessonDuration">15 min</span>
                     </div>
                     <h1 class="lesson-title" id="lessonTitle">Loading Lesson...</h1>
+                    <div class="lesson-description" id="lessonDescription" style="display: none;">
+                        <p id="lessonDescriptionText"></p>
+                    </div>
                     <div class="title-underline"></div>
                 </div>
 
