--- a/admin.html
+++ b/admin.html
@@ -139,6 +139,12 @@
                                 <!-- Empty group for layout balance -->
                             </div>
                         </div>
+                        
+                        <div class="form-group full-width">
+                            <label for="lessonDescription" class="form-label">Lesson Description</label>
+                            <textarea id="lessonDescription" name="description" class="form-textarea" rows="3" 
+                                      placeholder="Provide a brief description of what students will learn in this lesson..."></textarea>
+                        </div>
 
                         <!-- Material Builder Section (Integrated) -->
                         <div class="materials-section">
