fixed lesson displays

--- a/lesson.html
+++ b/lesson.html
@@ -38,12 +38,8 @@
                         <span class="nav-text">Back to Course</span>
                     </button>
                     
-                    <div class="lesson-progress-mini">
-                        <span class="lesson-number" id="lessonNumber">Lesson 1</span>
-                        <div class="progress-dots" id="progressDots">
-                            <!-- Progress dots will be generated dynamically -->
-                        </div>
-                    </div>
+                    <!-- Duration in top right of header -->
+                    <div class="lesson-duration-header" id="lessonDuration">15 min</div>
                 </div>
 
                 <!-- Lesson Title Section -->
@@ -51,8 +47,8 @@
                     <div class="lesson-meta">
                         <span class="course-title" id="courseTitle">Loading...</span>
                         <span class="lesson-type" id="lessonType">Content</span>
-                        <span class="lesson-duration" id="lessonDuration">15 min</span>
                     </div>
+                    <div class="lesson-number-centered" id="lessonNumber">Lesson 1</div>
                     <h1 class="lesson-title" id="lessonTitle">Loading Lesson...</h1>
                     <div class="lesson-description" id="lessonDescription" style="display: none;">
                         <p id="lessonDescriptionText"></p>
