fixed home.html links to index.html

--- a/courses.html
+++ b/courses.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h1><a href="home.html">IQA</a></h1>
+                <h1><a href="index.html">IQA</a></h1>
                 <span class="nav-subtitle">INTERACTIVE QURANIC ARABIC</span>
             </div>
             <div class="nav-links">
@@ -50,7 +50,7 @@
                     Start with our beginner course and progress through each level at your own pace. 
                     Unlock the beauty and wisdom of the Quran through understanding its original language.
                 </p>
-                <a href="home.html#signup" class="cta-btn">
+                <a href="index.html#signup" class="cta-btn">
                     <span class="btn-text">Sign Up to Get Started</span>
                     <span class="btn-arrow">→</span>
                 </a>
