--- a/course-detail.html
+++ b/course-detail.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h1><a href="home.html">IQA</a></h1>
+                <h1><a href="index.html">IQA</a></h1>
                 <span class="nav-subtitle">INTERACTIVE QURANIC ARABIC</span>
             </div>
             <div class="nav-links">
