refactor: centralize utilities in utils.js and eliminate code duplication
- Create shared window.IQAUtils with all common functions
- Implement Supabase client singleton pattern
- Remove duplicate code from all JS files (~200+ lines saved)
- Maintain full functionality across all pages

--- a/course-detail.html
+++ b/course-detail.html
@@ -124,6 +124,7 @@
         <button onclick="location.reload()" class="retry-btn">Retry</button>
     </div>
 
+    <script src="utils.js"></script>
     <script src="course-detail.js"></script>
 </body>
 </html>
