--- a/lesson.html
+++ b/lesson.html
@@ -138,6 +138,7 @@
         <span class="message-text">Lesson completed successfully!</span>
     </div>
 
+    <script src="utils.js"></script>
     <script src="lesson.js"></script>
 </body>
 </html>
